<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.stablekernel.twilioarchat.ui.room_creation.RoomActivityViewModel"/>
    </data>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_spacing"
        tools:context=".ui.room_creation.RoomActivity">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_logo"
            android:textSize="36dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/title"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textAlignment="center"/>

        <android.support.design.widget.TextInputLayout
            style="@style/AppTheme.TextInputLayout"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:text="@={vm.username}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/AppTheme.TextInputLayout"
            android:hint="@string/room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                style="@style/AppTheme.TextInputEditText"
                android:id="@+id/roomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:singleLine="true"
                tools:text = "Hi mom"
                android:text="@={vm.room}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Suppressing RTL warning, I literally want these on the left and right-->

            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/default_spacing_half"
                android:textAlignment="center"
                android:drawableLeft="@drawable/ic_join"
                tools:enabled="false"
                android:enabled="@{vm.inputValid}"
                android:onClick="@{(view) -> vm.onJoinClicked(view.context)}"
                android:text="@string/join_room"
                tools:ignore="RtlHardcoded"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/default_spacing_half"
                android:drawableLeft="@drawable/ic_host"
                android:enabled="@{vm.inputValid}"
                android:onClick="@{(view) -> vm.onHostClicked(view.context)}"
                android:text="@string/host_room"/>

        </android.support.v7.widget.LinearLayoutCompat>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </android.support.v7.widget.LinearLayoutCompat>
</layout>